Make supcom slope symmetric